--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,5 +1,5 @@
 {
-	"plugins": [ "logger", "audio", "video", "capture", "netcmds" ],
+	"plugins": [ "logger", "portaudio", "video", "capture", "netcmds" ],
 
 	"vsync": 1,
 	"adaptive_vsync": 0,
