--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -15,6 +15,7 @@
 	"audio_api": "ALSA",
 	"audio_device": "pipewire",
 	"audio_suggested_latency": 128,
+	"audio_nonblock": 1,
 
 	"network_command_port": 55355,
 
