Add gstreamer plugin

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,5 +1,5 @@
 {
-	"plugins": [ "logger", "portaudio", "video", "v4l2stream", "netcmds" ],
+	"plugins": [ "logger", "portaudio", "video", "gstreamer", "netcmds" ],
 
 	"vsync": 1,
 	"adaptive_vsync": 0,
