--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,5 +1,5 @@
 {
-	"plugins": [ "logger", "portaudio", "video", "gstreamer", "netcmds" ],
+	"plugins": [ "logger", "portaudio", "video", "v4lstream", "gstreamer", "ssr", "netcmds" ],
 
 	"vsync": 1,
 	"adaptive_vsync": 0,
@@ -19,6 +19,10 @@
 
 	"network_command_port": 55355,
 
-	"v4l_device": "/dev/video3"
+	"v4l_device": "/dev/video3",
+	"gstreamer_sink_pipeline": "",
+	"ssr_channel": "",
+
+	"_" : 0
 }
 // vim:ft=javascript
