Fix names of v4l2 settings

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,5 +1,5 @@
 {
-	"plugins": [ "logger", "portaudio", "video", "v4lstream", "gstreamer", "ssr", "netcmds" ],
+	"plugins": [ "logger", "portaudio", "video", "v4l2stream", "gstreamer", "ssr", "netcmds" ],
 
 	"vsync": 1,
 	"adaptive_vsync": 0,
@@ -19,7 +19,7 @@
 
 	"network_command_port": 55355,
 
-	"v4l_device": "/dev/video3",
+	"v4l2_device": "",
 	"gstreamer_sink_pipeline": "",
 	"ssr_channel": "",
 
