Add Perflog plugin
This plugin currently writes out too much data.

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,5 +1,7 @@
 {
-	"plugins": [ "logger", "perf", "savefile", "portaudio", "video", "v4l2stream", "gstreamer", "ssr", "netcmds" ],
+	"plugins": [ "logger", "perf", "perflog", "savefile", "portaudio", "video", "v4l2stream", "gstreamer", "ssr", "netcmds" ],
+
+	"perflog_filename": "perf.log",
 
 	"vsync": 1,
 	"adaptive_vsync": 0,
