Turn off unused plugins

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,5 +1,5 @@
 {
-	"plugins": [ "logger", "perflog", "savefile", "portaudio", "video", "v4l2stream", "gstreamer", "ssr", "netcmds", "rusage" ],
+	"plugins": [ "logger", "perflog", "savefile", "portaudio", "video", "ssr", "netcmds", "rusage" ],
 
 	"perflog_filename": "perf.log",
 
