Set buffer latency in pulseaudio plugin

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -17,7 +17,8 @@
 
 	"audio_api": "ALSA",
 	"audio_device": "pipewire",
-	"audio_suggested_latency": 128,
+	"audio_suggested_latency": 64,
+	"audio_maximum_latency": 64,
 	"audio_nonblock": 1,
 
 	"network_command_port": 55355,
