--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,32 +1,55 @@
 {
-	"plugins": [ "logger", "perflog", "savefile", "pulseaudio", "gl", "ssr", "netcmds", "rusage" ],
+  "plugins": [ "logger", "perflog", "savefile", "pulseaudio", "gl", "ssr", "netcmds", "rusage" ],
 
-	"perflog_filename": "perf.log",
+  "perflog_filename": "perf.log",
 
-	"vsync": 1,
-	"adaptive_vsync": 1,
-	"glfinish": 0,
-	"oml_sync": 0,
-	"sgi_sync": 0,
-	"nv_delay_before_swap": 0,
-	"scale_factor": 6.0,
+  "vsync": 1,
+  "adaptive_vsync": 1,
+  "glfinish": 0,
+  "oml_sync": 0,
+  "sgi_sync": 0,
+  "nv_delay_before_swap": 0,
+  "scale_factor": 6.0,
 
-	"frame_delay": 4,
-	"system_directory": ".",
-	"save_directory": ".",
+  "frame_delay": 4,
+  "system_directory": ".",
+  "save_directory": ".",
 
-	"audio_api": "ALSA",
-	"audio_device": "pipewire",
-	"audio_suggested_latency": 64,
-	"audio_maximum_latency": 64,
-	"audio_nonblock": 1,
+  "v4l2_device": "",
 
-	"network_command_port": 55355,
+  "alsa": {
+    "device": "default",
+    "audio_suggested_latency": 64,
+    "audio_maximum_latency": 64
+  },
 
-	"v4l2_device": "",
-	"gstreamer_sink_pipeline": "",
-	"ssr_channel": "",
+  "portaudio": {
+    "device": "default",
+    "audio_suggested_latency": 64,
+    "audio_maximum_latency": 64
+  },
 
-	"_" : 0
+  "pulseaudio": {
+    "audio_suggested_latency": 64,
+    "audio_maximum_latency": 64
+  },
+
+  "netcmds": {
+    "port": 55355
+   },
+
+  "perflog": {
+    "filename": "perf.log"
+  },
+
+  "ssr": {
+    "channel": "fenestra"
+  },
+
+  "v4l2": {
+    "device": "/dev/video0"
+  },
+
+  "_" : 0
 }
 // vim:ft=javascript
