Add plugin for video sync

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,5 +1,5 @@
 {
-  "plugins": [ "logger", "perflog", "savefile", "pulseaudio", "gl", "ssr", "netcmds", "rusage" ],
+  "plugins": [ "logger", "perflog", "savefile", "pulseaudio", "gl", "sync", "ssr", "netcmds", "rusage" ],
 
   "perflog_filename": "perf.log",
 
