Plugin-specific config for Sync plugin

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -3,11 +3,6 @@
 
   "perflog_filename": "perf.log",
 
-  "vsync": 1,
-  "adaptive_vsync": 1,
-  "glfinish": 0,
-  "oml_sync": 0,
-  "sgi_sync": 0,
   "nv_delay_before_swap": 0,
   "scale_factor": 6.0,
 
@@ -15,7 +10,13 @@
   "system_directory": ".",
   "save_directory": ".",
 
-  "v4l2_device": "",
+  "sync": {
+    "vsync": 1,
+    "adaptive_vsync": 1,
+    "glfinish": 0,
+    "oml_sync": 0,
+    "sgi_sync": 0
+  },
 
   "alsa": {
     "device": "default",
