--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,12 +1,8 @@
 {
-  "plugins": [ "logger", "perflog", "savefile", "pulseaudio", "gl", "sync", "ssr", "netcmds", "rusage" ],
+  "plugins": [ "logger", "perflog", "savefile", "pulseaudio", "gl", "sync", "framedelay", "ssr", "netcmds", "rusage" ],
 
-  "perflog_filename": "perf.log",
-
-  "nv_delay_before_swap": 0,
   "scale_factor": 6.0,
 
-  "frame_delay": 4,
   "system_directory": ".",
   "save_directory": ".",
 
@@ -16,6 +12,11 @@
     "glfinish": 0,
     "oml_sync": 0,
     "sgi_sync": 0
+  },
+
+  "framedelay": {
+    "milliseconds": 4,
+    "nv_delay_before_swap": 0
   },
 
   "alsa": {
