Add glFinish before swap buffers

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -9,7 +9,8 @@
   "sync": {
     "vsync": 1,
     "adaptive_vsync": 1,
-    "glfinish": 0,
+    "glfinish_draw": 0,
+    "glfinish_sync": 0,
     "oml_sync": 0,
     "sgi_sync": 0
   },
