Implement adaptive sgi_sync

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -8,7 +8,7 @@
 
   "sync": {
     "vsync": 1,
-    "adaptive_vsync": 1,
+    "adaptive_sync": 1,
     "glfinish_draw": 0,
     "glfinish_sync": 0,
     "oml_sync": 0,
