Add glClientWaitSync as a synchronization option

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -12,7 +12,8 @@
     "glfinish_draw": 0,
     "glfinish_sync": 0,
     "oml_sync": 0,
-    "sgi_sync": 0
+    "sgi_sync": 0,
+    "fence_sync": 0
   },
 
   "framedelay": {
