--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -13,7 +13,8 @@
     "glfinish_sync": 0,
     "oml_sync": 0,
     "sgi_sync": 0,
-    "fence_sync": 0
+    "fence_sync": 0,
+    "swap_delay": 0
   },
 
   "framedelay": {
