Move settings that control swap delay to a subobject in the config

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -9,12 +9,14 @@
   "sync": {
     "vsync": 1,
     "adaptive": 1,
-    "glfinish_draw": 0,
+    "delay": {
+      "fence": 0,
+      "glfinish": 0,
+      "nanosleep": 0
+    },
     "glfinish_sync": 0,
     "oml_sync": 0,
-    "sgi_sync": 0,
-    "fence_sync": 0,
-    "swap_delay": 0
+    "sgi_sync": 0
   },
 
   "framedelay": {
