--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -11,6 +11,7 @@
     "adaptive": 1,
     "delay": {
       "fence": 0,
+      "query_object": 0,
       "glfinish": 0,
       "nanosleep": 0
     },
