--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -13,7 +13,8 @@
       "fence": 0,
       "query_object": 0,
       "glfinish": 0,
-      "nanosleep": 0
+      "nanosleep": 0,
+      "margin": 0.5
     },
     "glfinish_sync": 0,
     "oml_sync": 0,
