Prevent screensaver from activating on X11

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,5 +1,5 @@
 {
-  "plugins": [ "logger", "perflog", "savefile", "pulseaudio", "gl", "sync", "framedelay", "ssr", "netcmds", "rusage" ],
+  "plugins": [ "logger", "perflog", "savefile", "pulseaudio", "gl", "sync", "framedelay", "ssr", "netcmds", "rusage", "screensaver" ],
 
   "scale_factor": 6.0,
 
@@ -50,6 +50,15 @@
 
   "netcmds": {
     "port": 55355
+   },
+
+   "rusage": {
+   },
+
+   "screensaver": {
+     "inhibit": {
+       "xresetscreensaver": 1
+      }
    },
 
   "perflog": {
