--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -6,6 +6,11 @@
   "system_directory": ".",
   "save_directory": ".",
 
+  "gamepad": {
+    "joystick": 0,
+    "port": 0
+  },
+
   "sync": {
     "vsync": 1,
     "adaptive": 1,
