--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,5 +1,5 @@
 {
-  "plugins": [ "logger", "perflog", "savefile", "gamepad", "pulseaudio", "gl", "sync", "framedelay", "ssr", "netcmds", "rusage", "screensaver" ],
+  "plugins": [ "logger", "perflog", "savefile", "glfw-gamepad", "pulseaudio", "gl", "sync", "framedelay", "ssr", "netcmds", "rusage", "screensaver" ],
 
   "scale_factor": 6.0,
 
