Use glfw-gamepad for config group

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -6,7 +6,7 @@
   "system_directory": ".",
   "save_directory": ".",
 
-  "gamepad": {
+  "glfw-gamepad": {
     "joystick": 0,
     "port": 0
   },
