Add enabled flag for all plugins

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -1,5 +1,18 @@
 {
-  "plugins": [ "logger", "perflog", "savefile", "glfw-gamepad", "pulseaudio", "gl", "sync", "framedelay", "ssr", "netcmds", "rusage", "screensaver" ],
+  "plugins": {
+    "logger": 1,
+    "perflog": 1,
+    "savefile": 1,
+    "glfw-gamepad": 1,
+    "pulseaudio": 1,
+    "gl": 1,
+    "sync": 1,
+    "framedelay": 1,
+    "ssr": 1,
+    "netcmds": 1,
+    "rusage": 1,
+    "screensaver": 1
+  },
 
   "scale_factor": 6.0,
 
