Add paths section to config

--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -14,10 +14,12 @@
     "screensaver": 1
   },
 
-  "scale_factor": 6.0,
+  "paths": {
+    "system_directory": ".",
+    "save_directory": "."
+  },
 
-  "system_directory": ".",
-  "save_directory": ".",
+  "scale_factor": 6.0,
 
   "glfw-gamepad": {
     "joystick": 0,
