--- a/fenestra.cfg
+++ b/fenestra.cfg
@@ -16,7 +16,8 @@
 
   "paths": {
     "system_directory": ".",
-    "save_directory": "."
+    "save_directory": "./saves",
+    "state_directory": "./states"
   },
 
   "scale_factor": 6.0,
